# keyple-plugin-cpp-api

./: CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md  _config.yml  index.md
2.0.0/: _autonomous_observable_plugin_api_8h.html  _autonomous_observable_plugin_api_8h__dep__incl.map  _autonomous_observable_plugin_api_8h__incl.map  _autonomous_observable_plugin_api_8h_source.html  _autonomous_observable_plugin_spi_8h.html  _autonomous_observable_plugin_spi_8h_source.html  _autonomous_selection_reader_spi_8h.html  _autonomous_selection_reader_spi_8h_source.html  _card_i_o_exception_8h.html  _card_i_o_exception_8h__incl.map  _card_i_o_exception_8h__incl.md5  _card_i_o_exception_8h_source.html  _configurable_reader_spi_8h.html  _configurable_reader_spi_8h_source.html  _dont_wait_for_card_removal_during_processing_spi_8h.html  _dont_wait_for_card_removal_during_processing_spi_8h_source.html  _observable_plugin_spi_8h.html  _observable_plugin_spi_8h_source.html  _observable_reader_spi_8h.html  _observable_reader_spi_8h__incl.map  _observable_reader_spi_8h__incl.md5  _observable_reader_spi_8h_source.html  _plugin_api_properties_8h.html  _plugin_api_properties_8h__incl.md5  _plugin_api_properties_8h_source.html  _plugin_factory_spi_8h.html  _plugin_factory_spi_8h__incl.map  _plugin_factory_spi_8h__incl.md5  _plugin_factory_spi_8h_source.html  _plugin_i_o_exception_8h.html  _plugin_i_o_exception_8h__incl.md5  _plugin_i_o_exception_8h_source.html  _plugin_spi_8h.html  _plugin_spi_8h_source.html  _pool_plugin_factory_spi_8h.html  _pool_plugin_factory_spi_8h__incl.map  _pool_plugin_factory_spi_8h_source.html  _pool_plugin_spi_8h.html  _pool_plugin_spi_8h_source.html  _reader_i_o_exception_8h.html  (+125 more)
2.0.1-SNAPSHOT/: _autonomous_observable_plugin_api_8h.html  _autonomous_observable_plugin_api_8h_source.html  _autonomous_observable_plugin_spi_8h.html  _autonomous_observable_plugin_spi_8h_source.html  _autonomous_selection_reader_spi_8h.html  _autonomous_selection_reader_spi_8h_source.html  _card_i_o_exception_8h.html  _card_i_o_exception_8h_source.html  _configurable_reader_spi_8h.html  _configurable_reader_spi_8h__incl.md5  _configurable_reader_spi_8h_source.html  _dont_wait_for_card_removal_during_processing_spi_8h.html  _dont_wait_for_card_removal_during_processing_spi_8h_source.html  _observable_plugin_spi_8h.html  _observable_plugin_spi_8h_source.html  _observable_reader_spi_8h.html  (+142 more)
include/: CMakeLists.txt  CMakeLists.txt.keyple-util
include/keyple/core/plugin/: AutonomousObservablePluginApi.hpp  CardIOException.hpp  CardInsertionWaiterAsynchronousApi.hpp  CardRemovalWaiterAsynchronousApi.hpp  PluginApiProperties.hpp  PluginIOException.hpp  ReaderIOException.hpp  TaskCanceledException.hpp  WaitForCardInsertionAutonomousReaderApi.hpp  WaitForCardRemovalAutonomousReaderApi.hpp
include/keyple/core/plugin/spi/: AutonomousObservablePluginSpi.hpp  ObservablePluginSpi.hpp  PluginFactorySpi.hpp  PluginSpi.hpp  PoolPluginFactorySpi.hpp  PoolPluginSpi.hpp  PoolReaderSpi.hpp
include/keyple/core/plugin/spi/reader/: AutonomousSelectionReaderSpi.hpp  ConfigurableReaderSpi.hpp  PoolReaderSpi.hpp  ReaderSpi.hpp
include/keyple/core/plugin/spi/reader/observable/: ObservableReaderSpi.hpp
include/keyple/core/plugin/spi/reader/observable/state/insertion/: CardInsertionWaiterAsynchronousSpi.hpp  CardInsertionWaiterBlockingSpi.hpp  CardInsertionWaiterNonBlockingSpi.hpp  WaitForCardInsertionAutonomousSpi.hpp  WaitForCardInsertionBlockingSpi.hpp  WaitForCardInsertionNonBlockingSpi.hpp
include/keyple/core/plugin/spi/reader/observable/state/processing/: CardPresenceMonitorBlockingSpi.hpp  DontWaitForCardRemovalDuringProcessingSpi.hpp  WaitForCardRemovalDuringProcessingBlockingSpi.hpp
include/keyple/core/plugin/spi/reader/observable/state/removal/: CardRemovalWaiterAsynchronousSpi.hpp  CardRemovalWaiterBlockingSpi.hpp  CardRemovalWaiterNonBlockingSpi.hpp  WaitForCardRemovalAutonomousSpi.hpp  WaitForCardRemovalBlockingSpi.hpp  WaitForCardRemovalNonBlockingSpi.hpp
(+262 files in other folders)
